--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.43"
+    "@types/react": "^18.2.43",
+    "@types/react-modal": "^3.16.3",
+    "react-modal": "^3.16.1"
   }
 }
