--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,5 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     stdin_open: true
+    restart: always
     command: sh -c "npm start"
