--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.92.5",
+    "@react-three/fiber": "^8.15.12",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "sass": "^1.69.4",
+    "three": "^0.160.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +51,8 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-modal": "^3.16.3",
+    "@types/three": "^0.160.0",
+    "leva": "^0.9.35",
     "react-modal": "^3.16.1"
   }
 }
