--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sass": "^1.69.4",
     "three": "^0.160.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-toastify": "^10.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +54,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/three": "^0.160.0",
     "leva": "^0.9.35",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.1"
   }
 }
