изменения в логике авторизации
обработка ошибки при авторизации
сохранение в localstorage refresh_token
новая страница ProductGenerationPage
новый компонент TexturedMug

доделать:
логика регистрации
передача access_token в заголовок запроса
логика получения текстур и 3D-моделей

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,5 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     stdin_open: true
-    restart: always
+#    restart: always
     command: sh -c "npm start"
