--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@types/node": "^16.18.59",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.1",
     "redux": "^5.0.0",
     "sass": "^1.69.4",
     "three": "^0.160.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "react-toastify": "^10.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
